config/kubernetes/selenium_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: artifactcart-selenium
  labels:
    role: selenium
spec:
  selector:
    app: artifactcart
    role: selenium
  ports:
    - protocol: TCP
      port: 4444
      targetPort: selenium-port1
      name: selenium-port1
    - protocol: TCP
      port: 5900
      targetPort: selenium-port2
      name: selenium-port2
