config/kubernetes/web_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: artifactcart-web
  labels:
    role: web
spec:
  selector:
    app: artifactcart
    role: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: nginx-port
      name: nginx-port
